--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.1.2",
     "dotenv": "^16.0.3",
     "framer-motion": "^7.5.1",
     "next": "12.3.1",
